# Mesh-Viewer

./: CMakeLists.txt  README.md
glad/src/: glad.c
resource/lumine/: lumine.fbx
src/: camera.cpp  camera.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h
src/shader/: ambient.frag  common.vert  phong.frag  triangle.frag  triangle.vert
